--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "morgan": "^1.10.0",
     "node-mailjet": "^6.0.6",
     "nodemailer": "^6.9.16",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "uui": "^1.0.7",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
