--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "node-mailjet": "^6.0.6",
     "nodemailer": "^6.9.16",
+    "path": "^0.12.7",
     "socket.io": "^4.8.1",
     "uui": "^1.0.7",
     "uuid": "^11.0.3"
