--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "path": "^0.12.7",
     "socket.io": "^4.8.1",
     "uui": "^1.0.7",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "websocket": "^1.0.35",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
