--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "express": "^4.21.1",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.0",
+    "mongoose": "^8.8.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-mailjet": "^6.0.6",
     "nodemailer": "^6.9.16",
     "path": "^0.12.7",
+    "pdfkit": "^0.15.1",
     "socket.io": "^4.8.1",
     "uui": "^1.0.7",
     "uuid": "^11.0.3",
