--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.1",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
+    "math": "^0.0.3",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.2",
     "morgan": "^1.10.0",
